# graftvm

./: Cargo.toml  README.md
examples/: fact.pl  fib.gfvm  hello.gfvm  let_expr.gfvm
graftvm_bytecode/: Cargo.toml
graftvm_bytecode/src/: lib.rs
graftvm_data/: Cargo.toml
graftvm_data/src/: data.rs  kind.rs  lib.rs
graftvm_engine/: Cargo.toml
graftvm_engine/src/: opcode.rs
graftvm_engine/src/vm/: arithmetic.rs  bitwise.rs  compare.rs  constant.rs  conversion.rs  mod.rs  primitive.rs  unary.rs  utils.rs  window.rs
graftvm_error/: Cargo.toml
graftvm_error/src/: lib.rs
graftvm_fragment/: Cargo.toml
graftvm_fragment/src/: lib.rs
graftvm_interpreter/: Cargo.toml
graftvm_interpreter/src/vm/: arithmetic.rs  bitwise.rs  compare.rs  constant.rs  conversion.rs  mod.rs  unary.rs  utils.rs  window.rs
graftvm_ir/: Cargo.toml
graftvm_ir/src/: lib.rs
graftvm_language/: Cargo.toml
graftvm_language/src/: lexer.rs  lib.rs  lower.rs  parser.rs
graftvm_liternal/: Cargo.toml
graftvm_liternal/src/: lib.rs
graftvm_liternal/src/liternal/: float.rs  int.rs  mod.rs  uint.rs
graftvm_window/: Cargo.toml
graftvm_window/src/: lib.rs
src/: main.rs
