[package]
name = "graftvm"
version = "0.1.0"
edition = "2021"

[dependencies]
graftvm_bytecode = { path = "graftvm_bytecode" }
graftvm_language = { path = "graftvm_language" }
graftvm_engine = { path = "graftvm_interpreter" }
graftvm_window = { path = "graftvm_window" }

[workspace]
members = [
    "graftvm_liternal",
    "graftvm_bytecode",
    "graftvm_window",
    "graftvm_interpreter",
    "graftvm_ir",
    "graftvm_language",
]
